--- a/ParkyWeb/Views/Shared/Components/Footer/Default.cshtml
+++ b/ParkyWeb/Views/Shared/Components/Footer/Default.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
 }
 
-<footer class="border-top footer text-muted">
-    <div class="container">
+<footer class="fixed-bottom bg-primary border-top footer text-muted">
+    <div class="container text-white">
         &copy; 2022 - ParkyWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
