--- a/ParkyWeb/Views/Shared/_Styles.cshtml
+++ b/ParkyWeb/Views/Shared/_Styles.cshtml
@@ -1,4 +1,6 @@
-﻿<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+﻿@*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
+<link rel="stylesheet" href="~/lib/bootstrap/dist/css/Cerulean-bootstrap.min.css"/>
+@*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/Solar-bootstrap.min.css"/>*@
 <link rel="stylesheet" href="~/ParkyWeb.styles.css" asp-append-version="true" />
 
 <link rel="stylesheet" href="~/lib/fontawesome/css/all.css"/>
