--- a/ParkyWeb/Views/Shared/Components/Header/Default.cshtml
+++ b/ParkyWeb/Views/Shared/Components/Header/Default.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpAccessor
+@{
 
 }
 
@@ -18,12 +20,27 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>*@
-                    <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="" asp-controller="NationalParks" asp-action="Index">Nation Park</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="" asp-controller="Trails" asp-action="Index">Trail</a>
-                    </li>
+
+                    @if(httpAccessor.HttpContext.Session.GetString("JWToken") != null && 
+                    httpAccessor.HttpContext.Session.GetString("JWToken").ToString().Length > 0)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="NationalParks" asp-action="Index">Nation Park</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Trails" asp-action="Index">Trail</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                        </li>
+                    }else{
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
