--- a/ParkyWeb/Views/Shared/_Layout.cshtml
+++ b/ParkyWeb/Views/Shared/_Layout.cshtml
@@ -13,6 +13,15 @@
     <vc:header></vc:header>
     <div class="container">
         <main role="main" class="pb-3">
+            @if (TempData["alert"] != null)
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    @TempData["alert"]
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>                
+            }
             @RenderBody()
         </main>
     </div>
